cleanup conf with CAS

--- a/gatein/conf/exo.properties
+++ b/gatein/conf/exo.properties
@@ -1238,11 +1238,9 @@ gatein.sso.filter.logout.class=org.gatein.sso.agent.filter.SAML2LogoutFilter
 gatein.sso.filter.login.sso.url=/@@portal.container.name@@/dologin
 gatein.sso.filter.initiatelogin.enabled=false
 gatein.sso.saml.config.file=${exo.conf.dir}/saml2/picketlink-sp.xml
-#gatein.sso.idp.host=https://localhost:8443/cas
-gatein.sso.idp.host=samlexo-dev-ed.my.salesforce.com
-#gatein.sso.idp.url=https://localhost:8443/cas/idp/profile/SAML2/POST/SSO
-gatein.sso.idp.url=https://samlexo-dev-ed.my.salesforce.com/idp/endpoint/HttpPost
-gatein.sso.sp.url=https://176.188.199.147:8443/dologin
+gatein.sso.idp.host=localhost
+gatein.sso.idp.url=https://localhost:8443/cas/idp/profile/SAML2/POST/SSO
+gatein.sso.sp.url=http://sp.exoplatform.com:8090/portal/dologin
 # WARNING: This bundled keystore is only for testing purposes. You should generate and use your own keystore!
 gatein.sso.picketlink.keystore=${exo.conf.dir}/saml2/salesforce_keystore.jks
 
@@ -1255,7 +1253,6 @@ gatein.sso.login.module.class=org.gatein.sso.agent.login.SAML2IntegrationLoginMo
 gatein.sso.valve.enabled=true
 gatein.sso.valve.class=org.gatein.sso.saml.plugin.valve.ServiceProviderAuthenticator
 
-#exo.base.url=https://176.188.199.147:8443
 
 
 
